--- a/src/main/resources/net/mrpg/mrpglauncher/login-view.fxml
+++ b/src/main/resources/net/mrpg/mrpglauncher/login-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" stylesheets="launcher-style.css"
+<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" stylesheets="@launcher-style.css"
       fx:controller="net.mrpg.mrpglauncher.LoginController"
       prefHeight="300.0" prefWidth="400.0">
     <padding>
