--- a/src/main/resources/net/mrpg/mrpglauncher/main-view.fxml
+++ b/src/main/resources/net/mrpg/mrpglauncher/main-view.fxml
@@ -5,51 +5,85 @@
 <?import javafx.scene.layout.*?>
 <?import org.kordamp.ikonli.javafx.*?>
 
-<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="20.0" stylesheets="@launcher-style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.mrpg.mrpglauncher.MainController">
+<VBox alignment="CENTER" prefWidth="800.0" stylesheets="@launcher-style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.mrpg.mrpglauncher.MainController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText" styleClass="h1" text="MRPG Launcher" />
-   <VBox alignment="BOTTOM_CENTER" prefHeight="700.0" VBox.vgrow="ALWAYS">
-      <children>
-         <Label fx:id="DetailsLabel" alignment="CENTER" />
-         <ProgressBar fx:id="MCProgress" prefWidth="600.0" progress="0.0" styleClass="progress-bar, progress-bar-striped, progress-bar-animated" visible="false" />
-         <VBox fx:id="bottomButtonBox" alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
+   <StackPane stylesheets="@launcher-style.css">
+       <children>
+           <Label fx:id="welcomeText" styleClass="h1" text="MRPG Launcher" StackPane.alignment="TOP_CENTER" />
+         <StackPane prefWidth="809.0">
             <children>
-      
-               <!-- Toggle button for showing/hiding button bar -->
-               <Button fx:id="toggleButton" onAction="#onToggleButtonClick" styleClass="toggle-button" text="▲">
-                  <VBox.margin>
-                     <Insets bottom="10.0" />
-                  </VBox.margin>
-               </Button>
-      
-               <!-- Button bar that slides in/out -->
-               <ButtonBar fx:id="bottomButtonBar" buttonMinWidth="100.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="100.0">
-                  <buttons>
-                      <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#onLogoutButtonClick" ButtonBar.buttonData="LEFT" prefWidth="150.0" styleClass="button,btn, btn-danger" text="ログアウト" visible="false" />
-                      <Button fx:id="agreementButton" mnemonicParsing="false" onAction="#onAgreementButtonClick" ButtonBar.buttonData="RIGHT" prefWidth="150.0" styleClass="button,btn, btn-default" text="利用規約" />
-                      <Button fx:id="startButton" onAction="#onStartButtonClick" prefWidth="150.0" ButtonBar.buttonData="RIGHT" styleClass="button,btn, btn-primary" text="開始">
-                      <graphic>
-                          <FontIcon iconLiteral="mdi-account" />
-                      </graphic>
+               <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
+                  <children>
+                      <Button fx:id="toggleButtonUp" alignment="BOTTOM_CENTER" contentDisplay="BOTTOM" mnemonicParsing="false" onAction="#onToggleButtonClick" styleClass="toggle-button" text="▲" />
+                  </children>
+               </VBox>
+               <StackPane alignment="CENTER">
+                  <children>
+                     <Button fx:id="scrollRightButton" onAction="#onScrollRight" styleClass="scroll-button" text="&gt;" StackPane.alignment="CENTER_RIGHT">
+                        <StackPane.margin>
+                           <Insets right="20.0" />
+                        </StackPane.margin>
                      </Button>
-                     <Button mnemonicParsing="false" prefWidth="150.0" styleClass="button, btn, btn-default" ButtonBar.buttonData="LEFT" text="設定">
-                        <graphic>
-                            <FontIcon iconLiteral="mdi-settings" />
-                        </graphic>
+                     <!-- Navigation Buttons -->
+                     <Button fx:id="scrollLeftButton" onAction="#onScrollLeft" styleClass="scroll-button" text="&lt;" StackPane.alignment="CENTER_LEFT">
+                        <StackPane.margin>
+                           <Insets left="20.0" />
+                        </StackPane.margin>
                      </Button>
-                  </buttons>
-                  <VBox.margin>
-                     <Insets bottom="10.0" left="60.0" right="60.0" />
-                  </VBox.margin>
+                     <!-- Carrousel Content -->
+                     <ScrollPane fx:id="configScrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="NEVER">
+                        <content>
+                           <HBox fx:id="configContainer" alignment="CENTER" spacing="50.0">
+                              <padding>
+                                 <Insets left="80.0" right="80.0" />
+                              </padding>
+                           </HBox>
+                        </content>
+                     </ScrollPane>
+                  </children>
+               </StackPane>
+               <VBox fx:id="bottomButtonBox" alignment="BOTTOM_CENTER">
+                  <children>
+
+                     <!-- Toggle button for showing/hiding button bar -->
+                     <Button fx:id="toggleButton" onAction="#onToggleButtonClick" styleClass="toggle-button" text="▼">
+                        <VBox.margin>
+                           <Insets bottom="10.0" />
+                        </VBox.margin>
+                     </Button>
+
+                     <!-- Button bar that slides in/out -->
+                     <ButtonBar fx:id="bottomButtonBar" buttonMinWidth="150.0" nodeOrientation="LEFT_TO_RIGHT">
+                        <buttons>
+                            <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefWidth="150.0" styleClass="button,btn, btn-danger" text="ログアウト" visible="false" ButtonBar.buttonData="LEFT" />
+                            <Button fx:id="agreementButton" mnemonicParsing="false" onAction="#onAgreementButtonClick" prefWidth="150.0" styleClass="button,btn, btn-default" text="利用規約" ButtonBar.buttonData="RIGHT" />
+                            <Button fx:id="startButton" onAction="#onStartButtonClick" prefWidth="150.0" styleClass="button,btn, btn-primary" text="開始" ButtonBar.buttonData="RIGHT">
+                            <graphic>
+                                <FontIcon iconLiteral="mdi-account" />
+                            </graphic>
+                           </Button>
+                           <Button mnemonicParsing="false" prefWidth="150.0" styleClass="button, btn, btn-default" text="設定" ButtonBar.buttonData="LEFT">
+                              <graphic>
+                                  <FontIcon iconLiteral="mdi-settings" />
+                              </graphic>
+                           </Button>
+                        </buttons>
+                        <VBox.margin>
+                           <Insets bottom="10.0" left="60.0" right="60.0" />
+                        </VBox.margin>
+                        <padding>
+                           <Insets bottom="10.0" />
+                        </padding>
+                     </ButtonBar>
+                  </children>
                   <padding>
-                     <Insets bottom="10.0" />
+                     <Insets top="600.0" />
                   </padding>
-               </ButtonBar>
+               </VBox>
             </children>
-         </VBox>
+         </StackPane>
       </children>
-   </VBox>
+   </StackPane>
 </VBox>
