--- a/src/main/resources/net/mrpg/mrpglauncher/config-card.fxml
+++ b/src/main/resources/net/mrpg/mrpglauncher/config-card.fxml
@@ -5,15 +5,15 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane fx:id="cardRoot" styleClass="config-card" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.mrpg.mrpglauncher.ConfigCardController">
+<StackPane fx:id="cardRoot" maxHeight="270.0" maxWidth="480.0" styleClass="config-card" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.mrpg.mrpglauncher.ConfigCardController">
     <children>
         <!-- Background Image -->
         <ImageView fx:id="configImageView" fitHeight="270.0" fitWidth="480.0" pickOnBounds="true" StackPane.alignment="CENTER" />
 
         <!-- Content Overlay -->
-        <VBox alignment="BOTTOM_LEFT" pickOnBounds="false">
+        <VBox alignment="CENTER" pickOnBounds="false">
             <children>
-                <Label fx:id="configNameLabel" styleClass="config-card-label" text="Config Name">
+                <Label fx:id="configNameLabel" alignment="CENTER" styleClass="config-card-label" text="Config Name">
                     <padding>
                         <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
                     </padding>
