--- a/src/main/resources/net/mrpg/mrpglauncher/main-view.fxml
+++ b/src/main/resources/net/mrpg/mrpglauncher/main-view.fxml
@@ -5,76 +5,61 @@
 <?import javafx.scene.layout.*?>
 <?import org.kordamp.ikonli.javafx.*?>
 
-<StackPane fx:id="rootPane" minHeight="800.0" minWidth="800.0" onMouseClicked="#onMouseClicked" prefHeight="800.0" prefWidth="800.0" stylesheets="@launcher-style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.mrpg.mrpglauncher.MainController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-    <children>
-      <StackPane fx:id="black" opacity="0.3" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: black;" styleClass="blur" visible="false" />
-      <StackPane alignment="TOP_CENTER" StackPane.alignment="CENTER">
-         <children>
-            <StackPane alignment="TOP_CENTER" StackPane.alignment="CENTER">
-               <children>
-                  <!-- Carrousel Content -->
-                  <ScrollPane fx:id="configScrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="NEVER">
-                     <content>
-                        <HBox fx:id="configContainer" alignment="CENTER" spacing="50.0">
-                           <padding>
-                              <Insets left="80.0" right="80.0" />
-                           </padding>
-                        </HBox>
-                     </content>
-                  </ScrollPane>
-                  <Button fx:id="scrollRightButton" onAction="#onScrollRight" styleClass="scroll-button" text="&gt;" StackPane.alignment="CENTER_RIGHT">
-                     <StackPane.margin>
-                        <Insets right="20.0" />
-                     </StackPane.margin>
-                  </Button>
-                  <!-- Navigation Buttons -->
-                  <Button fx:id="scrollLeftButton" onAction="#onScrollLeft" styleClass="scroll-button" text="&lt;" StackPane.alignment="CENTER_LEFT">
-                     <StackPane.margin>
-                        <Insets left="20.0" />
-                     </StackPane.margin>
-                  </Button>
-               </children>
-            </StackPane>
-            <VBox fx:id="bottomButtonBox" alignment="TOP_CENTER" maxHeight="300.0">
-               <children>
+<BorderPane fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0" stylesheets="@launcher-style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.mrpg.mrpglauncher.MainController">
 
-                  <!-- Toggle button for showing/hiding button bar -->
-                  <Button fx:id="toggleButton" onAction="#onToggleButtonClick" styleClass="toggle-button" text="▼">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                  </Button>
+    <!-- Left Sidebar -->
+    <left>
+        <VBox fx:id="sidebar" alignment="TOP_CENTER" prefWidth="280.0" spacing="10.0" styleClass="sidebar">
+            <padding>
+                <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+            </padding>
+            <children>
+                <Label styleClass="sidebar-title" text="MRPG Launcher" />
+                <ScrollPane fx:id="configScrollPane" fitToWidth="true" hbarPolicy="NEVER" styleClass="config-list-scroll-pane">
+                    <content>
+                        <VBox fx:id="configContainer" spacing="8.0" />
+                    </content>
+                </ScrollPane>
+                <VBox VBox.vgrow="ALWAYS" /> <!-- Spacer -->
+                <Button fx:id="agreementButton" onAction="#onAgreementButtonClick" prefWidth="250.0" text="利用規約" />
+                <Button fx:id="logoutButton" onAction="#onLogoutButtonClick" prefWidth="250.0" text="ログアウト" visible="false" />
+            </children>
+        </VBox>
+    </left>
 
-                  <!-- Button bar that slides in/out -->
-                  <ButtonBar fx:id="bottomButtonBar" buttonMinWidth="150.0" nodeOrientation="LEFT_TO_RIGHT">
-                     <buttons>
-                         <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefWidth="150.0" styleClass="button,btn, btn-danger" text="ログアウト" visible="false" ButtonBar.buttonData="LEFT" />
-                         <Button fx:id="agreementButton" mnemonicParsing="false" onAction="#onAgreementButtonClick" prefWidth="150.0" styleClass="button,btn, btn-default" text="利用規約" ButtonBar.buttonData="RIGHT" />
-                         <Button fx:id="startButton" onAction="#onStartButtonClick" prefWidth="150.0" styleClass="button,btn, btn-primary" text="開始" ButtonBar.buttonData="RIGHT">
-                         <graphic>
-                             <FontIcon iconLiteral="mdi-account" />
-                         </graphic>
-                        </Button>
-                        <Button mnemonicParsing="false" prefWidth="150.0" styleClass="button, btn, btn-default" text="設定" ButtonBar.buttonData="LEFT">
-                           <graphic>
-                               <FontIcon iconLiteral="mdi-settings" />
-                           </graphic>
-                        </Button>
-                     </buttons>
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="60.0" right="60.0" />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" />
-                     </padding>
-                  </ButtonBar>
-               </children>
-            </VBox>
-             <Button fx:id="toggleButtonUp" alignment="BOTTOM_CENTER" contentDisplay="BOTTOM" onAction="#onToggleButtonClick" styleClass="toggle-button" text="▲" StackPane.alignment="BOTTOM_CENTER" />
-         </children>
-      </StackPane>
-   </children>
-</StackPane>
+    <!-- Main Content Area -->
+    <center>
+        <BorderPane fx:id="mainContent" styleClass="content-area">
+            <top>
+                <Button fx:id="sidebarToggleButton" onAction="#toggleSidebar" styleClass="sidebar-toggle-button" BorderPane.alignment="TOP_LEFT">
+                    <graphic>
+                        <FontIcon iconLiteral="mdi-menu" iconSize="20" />
+                    </graphic>
+                    <BorderPane.margin>
+                        <Insets left="15.0" top="15.0" />
+                    </BorderPane.margin>
+                </Button>
+            </top>
+            <center>
+                <VBox alignment="CENTER" spacing="15.0">
+                    <children>
+                        <Label fx:id="configNameLabel" styleClass="content-header" text="構成を選択してください" />
+                        <Label fx:id="configDescriptionLabel" styleClass="config-description" text="左のメニューから起動したいエピソードを選択してください。" textAlignment="CENTER" wrapText="true" />
+                    </children>
+                </VBox>
+            </center>
+            <bottom>
+                <VBox alignment="CENTER" spacing="20.0">
+                    <padding>
+                        <Insets bottom="50.0" />
+                    </padding>
+                    <children>
+                        <ProgressBar fx:id="progressBar" prefWidth="250.0" progress="0.0" visible="false" />
+                        <Button fx:id="startButton" onAction="#onStartButtonClick" prefHeight="60.0" prefWidth="250.0" styleClass="launch-button" text="開始" />
+                    </children>
+                </VBox>
+            </bottom>
+        </BorderPane>
+    </center>
+
+</BorderPane>
