--- a/src/main/resources/net/mrpg/mrpglauncher/main-view.fxml
+++ b/src/main/resources/net/mrpg/mrpglauncher/main-view.fxml
@@ -9,7 +9,7 @@
 
     <!-- Left Sidebar -->
     <left>
-        <VBox fx:id="sidebar" alignment="TOP_CENTER" prefWidth="280.0" spacing="10.0" styleClass="sidebar">
+        <VBox fx:id="sidebar" alignment="TOP_CENTER" minWidth="0.0" prefWidth="280.0" spacing="10.0" styleClass="sidebar">
             <padding>
                 <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
             </padding>
